# VOC_Project

./: .gitignore  pyproject.toml  verification.md  voc-monitor.spec
.claude/: acceptance-contract-theme-color-picker.md  context-summary-app-refactor.md  context-summary-dynamic-color-selection.md  context-summary-foup-chart-debug.md  context-summary-theme-color-picker.md  need-analysis-dynamic-color-selection.md  operations-log.md  refactoring-analysis-app.md  task-plan-theme-color-picker.md
.codex/: context-question-1.json  context-question-10.json  context-question-11.json  context-question-12.json  context-question-13.json  context-question-14.json  context-question-15.json  context-question-16.json  context-question-17.json  context-question-18.json  context-question-19.json  context-question-2.json  context-question-20.json  context-question-21.json  context-question-22.json  context-question-23.json  context-question-24.json  context-question-25.json  context-question-26.json  context-question-27.json  context-question-28.json  context-question-29.json  context-question-3.json  context-question-30.json  context-question-31.json  context-question-32.json  context-question-33.json  context-question-34.json  context-question-35.json  context-question-36.json  context-question-37.json  context-question-38.json  context-question-4.json  context-question-5.json  context-question-6.json  context-question-7.json  context-question-8.json  context-question-9.json  context-scan.json  context-sufficiency.json  (+5 more)
.serena/: project.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  (+4 more)
(+175 files in other folders)
